--- a/about.html
+++ b/about.html
@@ -295,7 +295,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="card mb-30">
-                            <h3 class="title"><a href="services-details.html">Premiumoljor & Produkter</a></h3>
+                            <h3 class="title"><a href=" ">Premiumoljor & Produkter</a></h3>
                             <p class="text">Vi använder endast högkvalitativa och hudvänliga oljor och produkter för att
                                 ge din kropp bästa möjliga omsorg.</p>
                         </div>
@@ -303,7 +303,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="card mb-30">
-                            <h3 class="title"><a href="services-details.html">Äkta Thaimassage</a></h3>
+                            <h3 class="title"><a href=" ">Äkta Thaimassage</a></h3>
                             <p class="text">Traditionella tekniker kombinerade med moderna metoder för att återställa
                                 balans, flexibilitet och lugn.</p>
                         </div>
@@ -311,7 +311,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="card mb-30">
-                            <h3 class="title"><a href="services-details.html">Personlig Spaupplevelse</a></h3>
+                            <h3 class="title"><a href=" ">Personlig Spaupplevelse</a></h3>
                             <p class="text">Varje behandling anpassas efter dina behov – för avkoppling, återhämtning
                                 eller inre harmoni.</p>
                         </div>
@@ -319,7 +319,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="card mb-30">
-                            <h3 class="title"><a href="services-details.html">Certifierat & Omtänksamt Team</a></h3>
+                            <h3 class="title"><a href=" ">Certifierat & Omtänksamt Team</a></h3>
                             <p class="text">Våra utbildade terapeuter erbjuder professionell behandling med varm omtanke
                                 och trygghet.</p>
                         </div>
@@ -327,7 +327,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="card mb-30">
-                            <h3 class="title"><a href="services-details.html">Snabb & Vänlig Service</a></h3>
+                            <h3 class="title"><a href=" ">Snabb & Vänlig Service</a></h3>
                             <p class="text">Från bokning till behandling – vi gör din upplevelse smidig, välkomnande och
                                 stressfri.</p>
                         </div>
@@ -335,7 +335,7 @@
 
                     <div class="col-lg-4 col-md-6">
                         <div class="card mb-30">
-                            <h3 class="title"><a href="services-details.html">Konsekvent Kvalitet & Vård</a></h3>
+                            <h3 class="title"><a href=" ">Konsekvent Kvalitet & Vård</a></h3>
                             <p class="text">Vi garanterar samma höga standard vid varje besök – för din komfort är vår
                                 prioritet.</p>
                         </div>
@@ -577,16 +577,16 @@
 
                                     </li>
                                     <!-- <li>
-                                    <a href="services-details.html">Hair Cut</a>
+                                    <a href=" ">Hair Cut</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html">Massage</a>
+                                    <a href=" ">Massage</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html">Makeup</a>
+                                    <a href=" ">Makeup</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html">Bridal</a>
+                                    <a href=" ">Bridal</a>
                                 </li> -->
                                 </ul>
                             </div>
