--- a/blog.html
+++ b/blog.html
@@ -571,16 +571,16 @@
 
                                 </li>
                                 <!-- <li>
-                                    <a href="services-details.html">Hair Cut</a>
+                                    <a href=" ">Hair Cut</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html">Massage</a>
+                                    <a href=" ">Massage</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html">Makeup</a>
+                                    <a href=" ">Makeup</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html">Bridal</a>
+                                    <a href=" ">Bridal</a>
                                 </li> -->
                             </ul>
                         </div>
