--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                         </div>
                         <div class="content">
                             
-                            <h3 class="title"><a href="services-details.html">Sportmassage</a></h3>
+                            <h3 class="title"><a href=" ">Sportmassage</a></h3>
                             <p class="text">Sportmassage hjälper kroppen att återhämta sig från spänningar,
                                  stress och fysisk belastning. Den lindrar djupa muskelspänningar, förbättrar 
                                  flexibiliteten, minskar ömhet och ökar rörligheten – 
@@ -444,7 +444,7 @@
                             <img src="assets/images/service/services1.jpeg" alt="Demo Image">
                         </div>
                         <div class="content">
-                            <h3 class="title"><a href="services-details.html">Sportmassage</a></h3>
+                            <h3 class="title"><a href=" ">Sportmassage</a></h3>
                             <p class="text">Sportmassage hjälper kroppen att återhämta sig från spänningar,
                                 stress och fysisk belastning. Den lindrar djupa muskelspänningar, förbättrar
                                 flexibiliteten, minskar ömhet och ökar rörligheten –
@@ -463,7 +463,7 @@
                             <img src="assets/images/service/service5.jpg" alt="Demo Image">
                         </div>
                         <div class="content">
-                            <h3 class="title"><a href="services-details.html">Bridal</a></h3>
+                            <h3 class="title"><a href=" ">Bridal</a></h3>
                             <p class="text">Lorem ipsum dolor sit amet, consetetur sadip scing elitr, sed diam nonumy.
                             </p>
                             <div class="hover-content">
@@ -498,66 +498,105 @@
                 </ul>
             </div>
             <div class="grid-container1">
-  <div class="card1">
-    <!-- IMAGE AT TOP -->
-    <div class="icon" style="text-align: center; margin-bottom: 10px;">
-      <img src="assets/images/massage.png" alt="Massage Icon"
-           style="width: 60px; height: auto; border-radius: 8px;">
-    </div>
+                <div class="card1">
+                    <!-- IMAGE AT TOP -->
+                    <div class="icon" style="text-align: center; margin-bottom: 10px;">
+                        <img src="assets/images/massage.png" alt="Massage Icon"
+                            style="width: 60px; height: auto; border-radius: 8px;">
+                    </div>
 
-    <div class="title1">Thai Mixed Massage</div>
-    <div class="icon1"><i class="fa-thin fa-laptop-code"></i></div>
-    <div class="content1">
-      <p style="color: black !important;">En unik kombination av traditionell thailändsk och modern massage – för både energi och avslappning.</p>
-       <span class="price" style="font-size: 22px;">
-      <strong style="color: #7ec8e3;padding-right: 10PX; ">30 </strong><span style="color: black !important;">min</span><strong style="color: black !important; padding: 10PX;">:</strong> <strong style="color: #7ec8e3; padding-right: 0PX;">450 </strong><span style="color: black !important;">kr</span><br>
-        <strong style="color: #7ec8e3;padding-right: 10PX; ">60 </strong><span style="color: black !important;">min</span><strong style="color: black !important; padding: 10PX;">:</strong> <strong style="color: #7ec8e3; padding-right: 0PX;">650 </strong><span style="color: black !important;">kr</span><br>
-        <strong style="color: #7ec8e3;padding-right: 10PX; ">90 </strong><span style="color: black !important;">min</span><strong style="color: black !important; padding: 10PX;">:</strong> <strong style="color: #7ec8e3; padding-right: 0PX;">950 </strong><span style="color: black !important;">kr</span>
-      </span>
-    </div>
-  </div>
+                    <div class="title1">Thai Mixed Massage</div>
+                    <div class="icon1"><i class="fa-thin fa-laptop-code"></i></div>
+                    <div class="content1">
+                        <p style="color: black !important;">En unik kombination av traditionell thailändsk och modern
+                            massage – för både energi och avslappning.</p>
+                        <span class="price" style="font-size: 22px;">
+                            <strong style="color: #7ec8e3;padding-right: 10PX; ">30 </strong><span
+                                style="color: black !important;">min</span><strong
+                                style="color: black !important; padding: 10PX;">:</strong> <strong
+                                style="color: #7ec8e3; padding-right: 0PX;">450 </strong><span
+                                style="color: black !important;">kr</span><br>
+                            <strong style="color: #7ec8e3;padding-right: 10PX; ">60 </strong><span
+                                style="color: black !important;">min</span><strong
+                                style="color: black !important; padding: 10PX;">:</strong> <strong
+                                style="color: #7ec8e3; padding-right: 0PX;">650 </strong><span
+                                style="color: black !important;">kr</span><br>
+                            <strong style="color: #7ec8e3;padding-right: 10PX; ">90 </strong><span
+                                style="color: black !important;">min</span><strong
+                                style="color: black !important; padding: 10PX;">:</strong> <strong
+                                style="color: #7ec8e3; padding-right: 0PX;">950 </strong><span
+                                style="color: black !important;">kr</span>
+                        </span>
+                    </div>
+                </div>
 
-  <div class="card1">
-    <!-- IMAGE AT TOP -->
-    <div class="icon" style="text-align: center; margin-bottom: 10px;">
-      <img src="assets/images/olive-oil.png" alt="Oil Massage"
-           style="width: 60px; height: auto; border-radius: 8px;">
-    </div>
+                <div class="card1">
+                    <!-- IMAGE AT TOP -->
+                    <div class="icon" style="text-align: center; margin-bottom: 10px;">
+                        <img src="assets/images/olive-oil.png" alt="Oil Massage"
+                            style="width: 60px; height: auto; border-radius: 8px;">
+                    </div>
 
-    <div class="title1">Oljemassage</div>
-    <div class="icon1"><i class="fa-thin fa-shield-check"></i></div>
-    <div class="content1">
-      <p style="color: black !important;">En avslappnande massage med varm olja som mjukar upp musklerna, minskar stress och skapar lugn.</p>
-      <span class="price" style="font-size: 22px;">
-        <!-- <strong style="color: #7ec8e3;">30 min</strong>: 400 kr<br>
+                    <div class="title1">Oljemassage</div>
+                    <div class="icon1"><i class="fa-thin fa-shield-check"></i></div>
+                    <div class="content1">
+                        <p style="color: black !important;">En avslappnande massage med varm olja som mjukar upp
+                            musklerna, minskar stress och skapar lugn.</p>
+                        <span class="price" style="font-size: 22px;">
+                            <!-- <strong style="color: #7ec8e3;">30 min</strong>: 400 kr<br>
         <strong style="color: #7ec8e3;">60 min</strong>: 600 kr<br>
         <strong style="color: #7ec8e3;">90 min</strong>: 900 kr -->
-         <strong style="color: #7ec8e3;padding-right: 10PX; ">30 </strong><span style="color: black !important;">min</span><strong style="color: black !important; padding: 10PX;">:</strong> <strong style="color: #7ec8e3; padding-right: 0PX;">400 </strong><span style="color: black !important;">kr</span><br>
-        <strong style="color: #7ec8e3;padding-right: 10PX; ">60 </strong><span style="color: black !important;">min</span><strong style="color: black !important; padding: 10PX;">:</strong> <strong style="color: #7ec8e3; padding-right: 0PX;">600 </strong><span style="color: black !important;">kr</span><br>
-        <strong style="color: #7ec8e3;padding-right: 10PX; ">90 </strong><span style="color: black !important;">min</span><strong style="color: black !important; padding: 10PX;">:</strong> <strong style="color: #7ec8e3; padding-right: 0PX;">900 </strong><span style="color: black !important;">kr</span>
-      </span>
-    </div>
-  </div>
+                            <strong style="color: #7ec8e3;padding-right: 10PX; ">30 </strong><span
+                                style="color: black !important;">min</span><strong
+                                style="color: black !important; padding: 10PX;">:</strong> <strong
+                                style="color: #7ec8e3; padding-right: 0PX;">400 </strong><span
+                                style="color: black !important;">kr</span><br>
+                            <strong style="color: #7ec8e3;padding-right: 10PX; ">60 </strong><span
+                                style="color: black !important;">min</span><strong
+                                style="color: black !important; padding: 10PX;">:</strong> <strong
+                                style="color: #7ec8e3; padding-right: 0PX;">600 </strong><span
+                                style="color: black !important;">kr</span><br>
+                            <strong style="color: #7ec8e3;padding-right: 10PX; ">90 </strong><span
+                                style="color: black !important;">min</span><strong
+                                style="color: black !important; padding: 10PX;">:</strong> <strong
+                                style="color: #7ec8e3; padding-right: 0PX;">900 </strong><span
+                                style="color: black !important;">kr</span>
+                        </span>
+                    </div>
+                </div>
 
-  <div class="card1">
-    <!-- IMAGE AT TOP -->
-    <div class="icon" style="text-align: center; margin-bottom: 10px;">
-      <img src="assets/images/massage (1).png" alt="Massage Icon"
-           style="width: 60px; height: auto; border-radius: 8px;">
-    </div>
+                <div class="card1">
+                    <!-- IMAGE AT TOP -->
+                    <div class="icon" style="text-align: center; margin-bottom: 10px;">
+                        <img src="assets/images/massage (1).png" alt="Massage Icon"
+                            style="width: 60px; height: auto; border-radius: 8px;">
+                    </div>
 
-    <div class="title1">Sportmassage</div>
-    <div class="icon1"><i class="fa-thin fa-wrench-simple"></i></div>
-    <div class="content1">
-      <p style="color: black !important;">Djupgående massage som lindrar muskelspänningar, förbättrar rörligheten och påskyndar återhämtningen.</p>
-      <span class="price" style="font-size: 22px;">
-        <strong style="color: #7ec8e3;padding-right: 10PX; ">30 </strong><span style="color: black !important;">min</span><strong style="color:  black !important; padding: 10PX;">:</strong> <strong style="color: #7ec8e3; padding-right: 0PX;">500 </strong><span style="color: black !important;">kr</span><br>
-        <strong style="color: #7ec8e3;padding-right: 10PX; ">60 </strong><span style="color: black !important;">min</span><strong style="color:  black !important; padding: 10PX;">:</strong> <strong style="color: #7ec8e3; padding-right: 0PX;">700 </strong><span style="color: black !important;">kr</span><br>
-        <strong style="color: #7ec8e3;padding-right: 10PX; ">90 </strong><span style="color: black !important;">min</span><strong style="color:  black !important; padding: 10PX;">:</strong> <strong style="color: #7ec8e3; padding-right: 0PX;">1100 </strong><span style="color: black !important;">kr</span>
-      </span>
-    </div>
-  </div>
-</div>
+                    <div class="title1">Sportmassage</div>
+                    <div class="icon1"><i class="fa-thin fa-wrench-simple"></i></div>
+                    <div class="content1">
+                        <p style="color: black !important;">Djupgående massage som lindrar muskelspänningar, förbättrar
+                            rörligheten och påskyndar återhämtningen.</p>
+                        <span class="price" style="font-size: 22px;">
+                            <strong style="color: #7ec8e3;padding-right: 10PX; ">30 </strong><span
+                                style="color: black !important;">min</span><strong
+                                style="color:  black !important; padding: 10PX;">:</strong> <strong
+                                style="color: #7ec8e3; padding-right: 0PX;">500 </strong><span
+                                style="color: black !important;">kr</span><br>
+                            <strong style="color: #7ec8e3;padding-right: 10PX; ">60 </strong><span
+                                style="color: black !important;">min</span><strong
+                                style="color:  black !important; padding: 10PX;">:</strong> <strong
+                                style="color: #7ec8e3; padding-right: 0PX;">700 </strong><span
+                                style="color: black !important;">kr</span><br>
+                            <strong style="color: #7ec8e3;padding-right: 10PX; ">90 </strong><span
+                                style="color: black !important;">min</span><strong
+                                style="color:  black !important; padding: 10PX;">:</strong> <strong
+                                style="color: #7ec8e3; padding-right: 0PX;">1100 </strong><span
+                                style="color: black !important;">kr</span>
+                        </span>
+                    </div>
+                </div>
+            </div>
 
 
         </div>
@@ -587,8 +626,8 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card mb-30" style="height: 120px !important; border-radius: 12px;">
                         <div class="icon">
-                            <img src="assets/images/phone-call (1).png"style=" border-radius: 12px;" alt="Location Icon"
-                                style="width: 24px; height: 24px;">
+                            <img src="assets/images/phone-call (1).png" style=" border-radius: 12px;"
+                                alt="Location Icon" style="width: 24px; height: 24px;">
                         </div>
                         <div class="content">
                             <a href="https://wa.me/46736955488?text=Hi%2C%20I%20would%20like%20to%20know%20more%20about%20your%20services."
@@ -690,7 +729,7 @@
                             <img src="assets/images/fashion1.jpg" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
-                            <h3><a href="services-details.html">View Details</a></h3>
+                            <h3><a href=" ">View Details</a></h3>
                         </div> -->
                     </div>
                 </div>
@@ -700,7 +739,7 @@
                             <img src="assets/images/fashion2.jpg" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
-                            <h3><a href="services-details.html">View Details</a></h3>
+                            <h3><a href=" ">View Details</a></h3>
                         </div> -->
                     </div>
                 </div>
@@ -710,7 +749,7 @@
                             <img src="assets/images/fashion3.jpg" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
-                            <h3><a href="services-details.html">View Details</a></h3>
+                            <h3><a href=" ">View Details</a></h3>
                         </div> -->
                     </div>
                 </div>
@@ -720,7 +759,7 @@
                             <img src="assets/images/fashion4.jpg" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
-                            <h3><a href="services-details.html">View Details</a></h3>
+                            <h3><a href=" ">View Details</a></h3>
                         </div> -->
                     </div>
                 </div>
@@ -730,7 +769,7 @@
                             <img src="assets/images/fashion5.jpg" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
-                            <h3><a href="services-details.html">View Details</a></h3>
+                            <h3><a href=" ">View Details</a></h3>
                         </div> -->
                     </div>
                 </div>
@@ -740,7 +779,7 @@
                             <img src="assets/images/fashion6.jpg" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
-                            <h3><a href="services-details.html">View Details</a></h3>
+                            <h3><a href=" ">View Details</a></h3>
                         </div> -->
                     </div>
                 </div>
@@ -1101,16 +1140,16 @@
 
                                 </li>
                                 <!-- <li>
-                                    <a href="services-details.html">Hair Cut</a>
+                                    <a href=" ">Hair Cut</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html">Massage</a>
+                                    <a href=" ">Massage</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html">Makeup</a>
+                                    <a href=" ">Makeup</a>
                                 </li>
                                 <li>
-                                    <a href="services-details.html">Bridal</a>
+                                    <a href=" ">Bridal</a>
                                 </li> -->
                             </ul>
                         </div>
