--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                 <div class="col-lg-4 col-md-6 p-0">
                     <div class="card">
                         <div class="image">
-                            <img src="assets/images/fashion1.jpg" alt="Demo Image">
+                            <img src="assets/images/fashion01.jpeg" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
                             <h3><a href=" ">View Details</a></h3>
@@ -736,7 +736,7 @@
                 <div class="col-lg-4 col-md-6 p-0">
                     <div class="card">
                         <div class="image">
-                            <img src="assets/images/fashion2.jpg" alt="Demo Image">
+                            <img src="assets/images/fashion03 (2).jpeg" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
                             <h3><a href=" ">View Details</a></h3>
@@ -746,7 +746,7 @@
                 <div class="col-lg-4 col-md-6 p-0">
                     <div class="card">
                         <div class="image">
-                            <img src="assets/images/fashion3.jpg" alt="Demo Image">
+                            <img src="assets/images/fashion02.jpeg" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
                             <h3><a href=" ">View Details</a></h3>
@@ -756,7 +756,7 @@
                 <div class="col-lg-4 col-md-6 p-0">
                     <div class="card">
                         <div class="image">
-                            <img src="assets/images/fashion4.jpg" alt="Demo Image">
+                            <img src="assets/images/fashion04.jpeg" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
                             <h3><a href=" ">View Details</a></h3>
@@ -766,7 +766,7 @@
                 <div class="col-lg-4 col-md-6 p-0">
                     <div class="card">
                         <div class="image">
-                            <img src="assets/images/fashion5.jpg" alt="Demo Image">
+                            <img src="assets/images/fashion05.png" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
                             <h3><a href=" ">View Details</a></h3>
@@ -776,7 +776,7 @@
                 <div class="col-lg-4 col-md-6 p-0">
                     <div class="card">
                         <div class="image">
-                            <img src="assets/images/fashion6.jpg" alt="Demo Image">
+                            <img src="assets/images/fashion05.jpeg" alt="Demo Image">
                         </div>
                         <!-- <div class="hover-content">
                             <h3><a href=" ">View Details</a></h3>
