--- a/services.html
+++ b/services.html
@@ -591,7 +591,7 @@
                 </div>
                 <div class="col-lg-6 col-md-10 mb-30">
                     <div class="image">
-                        <img src="assets/images/newsletter1.jpg" alt="Demo Image">
+                        <img src="assets/images/about/about1.png" alt="Demo Image">
                     </div>
                 </div>
             </div>
