--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
             <div class="col-lg-4 col-md-12 p-0">
                 <div class="video-content">
                     <div class="video-image">
-                        <img src="assets/images/video.jpg" alt="FahSai Thai Massage Video" />
+                        <img src="assets/images/fashion05.png" alt="FahSai Thai Massage Video" />
                     </div>
                     <a href="https://www.youtube.com" class="youtube-popup video-btn">
                         <i class='bx bx-play'></i>
