--- a/about.html
+++ b/about.html
@@ -607,7 +607,7 @@
                                     <strong>🕒 Öppettider:</strong><br>
                                     MÅN – FRE:  10:00 – 19:30<br>
                                     LÖR: 11:00 – 19:00<br>
-                                    SÖN: STÄNGT
+                                    SÖN: 11:00 -- 19:00
                                 </li>
 
 
