--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
 
                                 LÖR: 11:00 – 19:00 <br>
 
-                                SÖN: STÄNGT (Closed)</span>
+                                SÖN: 11:00 -- 19:00 (Closed)</span>
                         </div>
                     </div>
                 </div>
@@ -1169,7 +1169,7 @@
                                     <strong>🕒 Öppettider:</strong><br>
                                     MÅN – FRE:  10:00 – 19:30<br>
                                     LÖR: 11:00 – 19:00<br>
-                                    SÖN: STÄNGT
+                                    SÖN: 11:00 -- 19:00
                                 </li>
 
 
