--- a/blog-details.html
+++ b/blog-details.html
@@ -450,7 +450,7 @@
                     <p class="text">
                         MÅN – FRE:  10:00 – 19:30<br>
                         LÖR: 11:00 – 19:00<br>
-                        SÖN: STÄNGT (Closed)
+                        SÖN: 11:00 -- 19:00 (Closed)
                     </p>
                 </div>
 
@@ -579,7 +579,7 @@
                                     <strong>🕒 Öppettider:</strong><br>
                                     MÅN – FRE:  10:00 – 19:30<br>
                                     LÖR: 11:00 – 19:00<br>
-                                    SÖN: STÄNGT
+                                    SÖN: 11:00 -- 19:00
                                 </li>
 
 
