--- a/about.html
+++ b/about.html
@@ -347,7 +347,134 @@
 
 
         <!-- end promo service section -->
+  <!-- start team section -->
+    <section id="team" class="team-section pt-100 pb-70">
+        <div class="container">
+            <div class="section-title">
+                <h2 class="title">Erfarna Skönhetsterapeuter<span></span></h2>
+                <p>
+                    Vi finns här för att få dig att känna dig trygg, vacker och nöjd. Varje behandling görs med omtanke
+                    och kärlek – din komfort och glädje är alltid vår första prioritet.
+                </p>
 
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card mb-30">
+                        <div class="image">
+                            <img src="assets/images/team/1.jpg" alt="Demo Images">
+                        </div>
+                        <!-- <div class="social-link">
+                            <a href="https://www.twitter.com/" target="_blank">
+                                <i class='bx bxl-twitter'></i>
+                            </a>
+                            <a href="https://www.facebook.com/" target="_blank">
+                                <i class='bx bxl-facebook'></i>
+                            </a>
+                            <a href="https://www.linkedin.com/" target="_blank">
+                                <i class='bx bxl-linkedin'></i>
+                            </a>
+                            <a href="https://www.skype.com/" target="_blank">
+                                <i class='bx bxl-skype'></i>
+                            </a>
+                        </div> -->
+                        <hr>
+                        <div class="content">
+                            <h3 class="title">
+                                <a href="team.html">Bina </a>
+                            </h3>
+                            <!-- <span class="text">Kropps- och själsterapeut</span> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card mb-30">
+                        <div class="image">
+                            <img src="assets/images/team/2.jpg" alt="Demo Image">
+                        </div>
+                        <!-- <div class="social-link">
+                            <a href="https://www.twitter.com/" target="_blank">
+                                <i class='bx bxl-twitter'></i>
+                            </a>
+                            <a href="https://www.facebook.com/" target="_blank">
+                                <i class='bx bxl-facebook'></i>
+                            </a>
+                            <a href="https://www.linkedin.com/" target="_blank">
+                                <i class='bx bxl-linkedin'></i>
+                            </a>
+                            <a href="https://www.skype.com/" target="_blank">
+                                <i class='bx bxl-skype'></i>
+                            </a>
+                        </div> -->
+                        <hr>
+                        <div class="content">
+                            <h3 class="title">
+                                <a href="team.html">Bina</a>
+                            </h3>
+                            <!-- <span class="text">Avslappningsexpert</span> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card mb-30">
+                        <div class="image">
+                            <img src="assets/images/team/3.jpg" alt="Demo Image">
+                        </div>
+                        <!-- <div class="social-link">
+                            <a href="https://www.twitter.com/" target="_blank">
+                                <i class='bx bxl-twitter'></i>
+                            </a>
+                            <a href="https://www.facebook.com/" target="_blank">
+                                <i class='bx bxl-facebook'></i>
+                            </a>
+                            <a href="https://www.linkedin.com/" target="_blank">
+                                <i class='bx bxl-linkedin'></i>
+                            </a>
+                            <a href="https://www.skype.com/" target="_blank">
+                                <i class='bx bxl-skype'></i>
+                            </a>
+                        </div> -->
+                        <hr>
+                        <div class="content">
+                            <h3 class="title">
+                                <a href="team.html">wanna </a>
+                            </h3>
+                            <!-- <span class="text"> Skapare av lugn</span> -->
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card mb-30">
+                        <div class="image">
+                            <img src="assets/images/team/1.jpg" alt="Demo Image">
+                        </div>
+                        <div class="social-link">
+                            <a href="https://www.twitter.com/" target="_blank">
+                                <i class='bx bxl-twitter'></i>
+                            </a>
+                            <a href="https://www.facebook.com/" target="_blank">
+                                <i class='bx bxl-facebook'></i>
+                            </a>
+                            <a href="https://www.linkedin.com/" target="_blank">
+                                <i class='bx bxl-linkedin'></i>
+                            </a>
+                            <a href="https://www.skype.com/" target="_blank">
+                                <i class='bx bxl-skype'></i>
+                            </a>
+                        </div>
+                        <hr>
+                        <div class="content">
+                            <h3 class="title">
+                                <a href="team.html">Edward Stevens</a>
+                            </h3>
+                            <span class="text">Energiåterställare</span>
+                        </div>
+                    </div>
+                </div> --> 
+            </div>
+        </div>
+    </section>  
+    <!-- <----- end team section --> 
         <!-- start service section -->
         <section id="service" class="service-section-four pb-70">
             <div class="container">
@@ -601,7 +728,8 @@
                                 <li>
                                     <strong>📍 Address:</strong><br>
                                     Ahrenbergsgatan 1A,<br>
-                                    416 73 Göteborg, Sweden
+                                    416 73 Göteborg, Sweden <br>
+                                    Vår salong ligger 150 meter från ICA Munkebäck
                                 </li>
                                 <li>
                                     <strong>🕒 Öppettider:</strong><br>
