--- a/gallery.html
+++ b/gallery.html
@@ -526,7 +526,8 @@
                                 <li>
                                     <strong>📍 Address:</strong><br>
                                     Ahrenbergsgatan 1A,<br>
-                                    416 73 Göteborg, Sweden
+                                    416 73 Göteborg, Sweden <br>
+                                    Vår salong ligger 150 meter från ICA Munkebäck
                                 </li>
                                 <li>
                                     <strong>🕒 Öppettider:</strong><br>
