--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
     <!-- end blog section -->
 
     <!-- start team section -->
-    <!-- <section id="team" class="team-section pt-100 pb-70">
+    <section id="team" class="team-section pt-100 pb-70">
         <div class="container">
             <div class="section-title">
                 <h2 class="title">Erfarna Skönhetsterapeuter<span></span></h2>
@@ -900,9 +900,9 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card mb-30">
                         <div class="image">
-                            <img src="assets/images/team/team1.jpg" alt="Demo Images">
+                            <img src="assets/images/team/1.jpg" alt="Demo Images">
                         </div>
-                        <div class="social-link">
+                        <!-- <div class="social-link">
                             <a href="https://www.twitter.com/" target="_blank">
                                 <i class='bx bxl-twitter'></i>
                             </a>
@@ -915,22 +915,22 @@
                             <a href="https://www.skype.com/" target="_blank">
                                 <i class='bx bxl-skype'></i>
                             </a>
-                        </div>
+                        </div> -->
                         <hr>
                         <div class="content">
                             <h3 class="title">
-                                <a href="team.html">Cory </a>
+                                <a href="team.html">Bina </a>
                             </h3>
-                            <span class="text">Kropps- och själsterapeut</span>
+                            <!-- <span class="text">Kropps- och själsterapeut</span> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card mb-30">
                         <div class="image">
-                            <img src="assets/images/team/team2.jpg" alt="Demo Image">
+                            <img src="assets/images/team/2.jpg" alt="Demo Image">
                         </div>
-                        <div class="social-link">
+                        <!-- <div class="social-link">
                             <a href="https://www.twitter.com/" target="_blank">
                                 <i class='bx bxl-twitter'></i>
                             </a>
@@ -943,22 +943,22 @@
                             <a href="https://www.skype.com/" target="_blank">
                                 <i class='bx bxl-skype'></i>
                             </a>
-                        </div>
+                        </div> -->
                         <hr>
                         <div class="content">
                             <h3 class="title">
-                                <a href="team.html">Brandi Boyd</a>
+                                <a href="team.html">Bina</a>
                             </h3>
-                            <span class="text">Avslappningsexpert</span>
+                            <!-- <span class="text">Avslappningsexpert</span> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card mb-30">
                         <div class="image">
-                            <img src="assets/images/team/team3.jpg" alt="Demo Image">
+                            <img src="assets/images/team/3.jpg" alt="Demo Image">
                         </div>
-                        <div class="social-link">
+                        <!-- <div class="social-link">
                             <a href="https://www.twitter.com/" target="_blank">
                                 <i class='bx bxl-twitter'></i>
                             </a>
@@ -971,20 +971,20 @@
                             <a href="https://www.skype.com/" target="_blank">
                                 <i class='bx bxl-skype'></i>
                             </a>
-                        </div>
+                        </div> -->
                         <hr>
                         <div class="content">
                             <h3 class="title">
-                                <a href="team.html">Alicia Salazar</a>
+                                <a href="team.html">wanna </a>
                             </h3>
-                            <span class="text"> Skapare av lugn</span>
+                            <!-- <span class="text"> Skapare av lugn</span> -->
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <!-- <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card mb-30">
                         <div class="image">
-                            <img src="assets/images/team/team4.jpg" alt="Demo Image">
+                            <img src="assets/images/team/1.jpg" alt="Demo Image">
                         </div>
                         <div class="social-link">
                             <a href="https://www.twitter.com/" target="_blank">
@@ -1008,11 +1008,11 @@
                             <span class="text">Energiåterställare</span>
                         </div>
                     </div>
-                </div>
+                </div> --> 
             </div>
         </div>
-    </section> -->
-    <!-- end team section -->
+    </section>  
+    <!-- <----- end team section --> 
 
     <!-- start testimonial section -->
     <section id="testimonial" class="testimonial-section pb-100">
@@ -1163,7 +1163,9 @@
                                 <li>
                                     <strong>📍 Address:</strong><br>
                                     Ahrenbergsgatan 1A,<br>
-                                    416 73 Göteborg, Sweden
+                                    416 73 Göteborg, Sweden <br>
+                                    Vår salong ligger 150 meter från ICA Munkebäck <br>
+                                    Vår salong ligger 150 meter från ICA Munkebäck
                                 </li>
                                 <li>
                                     <strong>🕒 Öppettider:</strong><br>
