--- a/index.html
+++ b/index.html
@@ -953,11 +953,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <!-- <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card mb-30">
                         <div class="image">
                             <img src="assets/images/team/3.jpg" alt="Demo Image">
-                        </div>
+                        </div> -->
                         <!-- <div class="social-link">
                             <a href="https://www.twitter.com/" target="_blank">
                                 <i class='bx bxl-twitter'></i>
@@ -972,15 +972,15 @@
                                 <i class='bx bxl-skype'></i>
                             </a>
                         </div> -->
-                        <hr>
+                        <!-- <hr>
                         <div class="content">
                             <h3 class="title">
                                 <a href="team.html">wanna </a>
-                            </h3>
+                            </h3> -->
                             <!-- <span class="text"> Skapare av lugn</span> -->
-                        </div>
-                    </div>
-                </div>
+                        <!-- </div> -->
+                    <!-- </div>
+                </div> -->
                 <!-- <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card mb-30">
                         <div class="image">
