--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
 
                                 LÖR: 11:00 – 19:00 <br>
 
-                                SÖN: 11:00 -- 19:00 (Closed)</span>
+                                SÖN: 11:00 -- 19:00</span>
                         </div>
                     </div>
                 </div>
