--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
     <!-- end blog section -->
 
     <!-- start team section -->
-    <section id="team" class="team-section pt-100 pb-70">
+    <!-- <section id="team" class="team-section pt-100 pb-70">
         <div class="container">
             <div class="section-title">
                 <h2 class="title">Erfarna Skönhetsterapeuter<span></span></h2>
@@ -901,7 +901,7 @@
                     <div class="card mb-30">
                         <div class="image">
                             <img src="assets/images/team/1.jpg" alt="Demo Images">
-                        </div>
+                        </div> -->
                         <!-- <div class="social-link">
                             <a href="https://www.twitter.com/" target="_blank">
                                 <i class='bx bxl-twitter'></i>
@@ -916,20 +916,20 @@
                                 <i class='bx bxl-skype'></i>
                             </a>
                         </div> -->
-                        <hr>
+                        <!-- <hr>
                         <div class="content">
                             <h3 class="title">
-                                <a href="team.html">Bina </a>
-                            </h3>
+                                <a href="team.html">Bina </a> -->
+                            <!-- </h3> -->
                             <!-- <span class="text">Kropps- och själsterapeut</span> -->
-                        </div>
+                        <!-- </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card mb-30">
                         <div class="image">
                             <img src="assets/images/team/2.jpg" alt="Demo Image">
-                        </div>
+                        </div> -->
                         <!-- <div class="social-link">
                             <a href="https://www.twitter.com/" target="_blank">
                                 <i class='bx bxl-twitter'></i>
@@ -944,15 +944,15 @@
                                 <i class='bx bxl-skype'></i>
                             </a>
                         </div> -->
-                        <hr>
+                        <!-- <hr>
                         <div class="content">
                             <h3 class="title">
                                 <a href="team.html">Bina</a>
-                            </h3>
+                            </h3> -->
                             <!-- <span class="text">Avslappningsexpert</span> -->
-                        </div>
+                        <!-- </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card mb-30">
                         <div class="image">
@@ -1009,9 +1009,9 @@
                         </div>
                     </div>
                 </div> --> 
-            </div>
+            <!-- </div>
         </div>
-    </section>  
+    </section>   -->
     <!-- <----- end team section --> 
 
     <!-- start testimonial section -->
