--- a/gallery.html
+++ b/gallery.html
@@ -420,7 +420,7 @@
                             Upplev avkopplande och professionell thailändsk massage hos FahSai Thai i Göteborg. Kontakta
                             oss direkt via WhatsApp för att boka din tid enkelt och snabbt.
                         </p>
-                        <a href="https://wa.me/46769498599" target="_blank" class="primary-btn"
+                        <a href="https://wa.me/+46736955488" target="_blank" class="primary-btn"
                             style="margin-top: 20px;">
                             Boka via WhatsApp
                         </a>
